@@ -5,12 +5,12 @@ import org.pawlak.rentalApp.model.User;
 import org.pawlak.rentalApp.model.enums.BookGenres;
 import org.pawlak.rentalApp.model.enums.UserRole;
 
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.Statement;
+import java.sql.*;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
 
 class UserDaoTest {
 
@@ -40,25 +40,61 @@ class UserDaoTest {
     }
 
     @Test
-    void shouldInsertAndFindUser() {
+    void TC_011_shouldInsertAndFindUser() {
         User user = new User(0, "Jan", "jan@test.com", "hashedPass", BookGenres.FANTASY, UserRole.USER);
         userDao.insert(user);
 
         List<User> allUsers = userDao.findAll();
         assertThat(allUsers).hasSize(1);
-        assertThat(allUsers.get(0).getName()).isEqualTo("Jan");
+        assertThat(allUsers.getFirst().getName()).isEqualTo("Jan");
     }
 
     @Test
-    void shouldUpdateUser() {
+    void TC_012_shouldUpdateUser() {
         User user = new User(0, "Anna", "anna@test.com", "pass", BookGenres.FANTASY, UserRole.USER);
         userDao.insert(user);
 
-        User inserted = userDao.findAll().get(0);
+        User inserted = userDao.findAll().getFirst();
         inserted.setName("Anna Nowak");
         userDao.update(inserted);
 
         User updated = userDao.findById(inserted.getId());
         assertThat(updated.getName()).isEqualTo("Anna Nowak");
+    }
+
+    //**************************************************************//
+    //***********************Exemptions testing*********************//
+    //**************************************************************//
+    @Test
+    void TC_013_insertShouldCatchSQLException() throws Exception {
+        Connection mockConnection = mock(Connection.class);
+        PreparedStatement mockStmt = mock(PreparedStatement.class);
+        when(mockConnection.prepareStatement(anyString())).thenReturn(mockStmt);
+
+        // wymuszamy wyjątek przy executeUpdate()
+        doThrow(new SQLException("DB error")).when(mockStmt).executeUpdate();
+
+        UserDao userDao = new UserDao(mockConnection);
+        User user = new User(0, "Jan", "jan@test.com", "pass", BookGenres.FANTASY, UserRole.USER);
+
+        // nie powinno rzucać wyjątku dalej, bo catchujemy w DAO
+        userDao.insert(user);
+
+        verify(mockStmt).executeUpdate();
+    }
+
+    @Test
+    void TC_14_updateShouldCatchSQLException() throws Exception {
+        Connection mockConnection = mock(Connection.class);
+        PreparedStatement mockStmt = mock(PreparedStatement.class);
+        when(mockConnection.prepareStatement(anyString())).thenReturn(mockStmt);
+        doThrow(new SQLException("DB error")).when(mockStmt).executeUpdate();
+
+        UserDao userDao = new UserDao(mockConnection);
+        User user = new User(1, "Anna", "anna@test.com", "pass", BookGenres.FANTASY, UserRole.USER);
+
+        userDao.update(user);
+
+        verify(mockStmt).executeUpdate();
     }
 }
